<resources>
    <string name="app_name">ZapatillasAPP</string>

    <string name="title_btn_home_iniciarSesion">Iniciar Sesión</string>
    <string name="title_btn_home_sinRegistrar">Sin Registrar</string>

    <string name="login_name">Inicio de Sesión</string>
    <string name="title_txt_login_name">Email</string>
    <string name="title_txt_login_password">Contraseña</string>
    <string name="title_btn_login_log">Iniciar Sesión</string>
    <string name="title_btn_login_register">Registrar</string>
    <string name="title_tv_login_register">¿No tiene cuenta?  Registrate</string>

    <string name="register_name">Registrar</string>
    <string name="title_txt_register_username">Username</string>
    <string name="title_txt_register_email">Email</string>
    <string name="title_txt_register_password1">Password</string>
    <string name="title_txt_register_password2">Password</string>
    <string name="title_btn_register_registrarse">Registrarse</string>
    <string name="title_tw_register">¿Ya tienes una cuenta? Inciar Sesión</string>

    <string name="title_btn_welcome_menu">Menu</string>

    <string name="menu_principal">Menú Principal</string>
    <string name="title_btn_menu_tiendas">Tiendas</string>
    <string name="title_btn_menu_favoritos">Favoritos</string>

    <string name="item_content">Item Content</string>


    <string name="Nombre_Tienda">NombreTienda</string>
    <string name="Tienda_imagen">TiendaImagen</string>

    <string name="Nombre_Marca">NombreMarca</string>
    <string name="Marca_imagen">MarcaImagen</string>

    <string name="Nombre_Zapatilla">Nombre Zapatilla</string>
    <string name="Imagen_Zapatillas">Imagen Zapatilla</string>


    <string name="Detalle_Tienda">Tienda</string>
    <string name="Detalle_Zapatilla">Zapatilla</string>
    <string name="Detalle_Marca">Marca</string>
    <string name="Detalle_Color">Color</string>
    <string name="Detalle_Tallas">Tallas</string>
    <string name="Detalle_Precio">Precio</string>

    <string name="FavTienda">Tienda</string>
    <string name="FavNombre">Zapatilla</string>
    <string name="FavPrecio">Precio</string>
    
    <string name="Pantalla_Inicio">Inicio</string>
    <string name="Pantalla_IniciodeSesion">Iniciar Sesión</string>
    <string name="Pantalla_Registrarse">Registrarse</string>
    <string name="Pantalla_Bienvenida">Bienvenida</string>
    <string name="Pantalla_Menu">Menu</string>
    <string name="Pantalla_Favoritos">Favoritos</string>
    <string name="Pantalla_Tiendas">Tiendas</string>
    <string name="Pantalla_Marcas">Marcas</string>
    <string name="Pantalla_Zapatillas">Zapatillas</string>
    <string name="Pantalla_Detalles">Detalles</string>
    
</resources>