...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img1"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#131313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
...
